# ShoppingListApp

./: README.md  build.gradle  settings.gradle
app/: build.gradle  keystore.jks
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/shoppinglistapp/: MainActivity.java  Product.java  ProductAdapter.java  Shop.java  ShopActivity.java  ShopAdapter.java
app/src/main/res/layout/: activity_main.xml  activity_shop.xml  dialog_product.xml  item_product.xml  item_shop.xml
app/src/main/res/menu/: main_menu.xml  shop_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
